[project]
name = "aws-lambda-tests"
version = "0.1.0"
description = ""
authors = [
    {name = "Matheus-ESW",email = "matheussoaresramos@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "urllib3 (>=2.6.0,<3.0.0)",
    "boto3 (>=1.42.4,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
